AME-4916, CR-4785. Replacing Restlet's ClientResource with HttpURLConnection.